--- a/src/app/pages/home/components/header/header.component.scss
+++ b/src/app/pages/home/components/header/header.component.scss
@@ -23,7 +23,7 @@ a{
     align-items: center;
     justify-content: center;
 }
-.iconmini svg{
+.iconmini svg, .iconmini div{
     margin-right: 10px;
 }
 .center_header{
