--- a/src/app/pages/admin/components/main/main.component.html
+++ b/src/app/pages/admin/components/main/main.component.html
@@ -19,7 +19,55 @@
                 <button style="font-size: 20px;">sửa</button>
             </div>
           </div>
+          <div class="containerinput">
+            <h2>Thêm sản phẩm</h2>
+            <form class="form" [formGroup]="addproductForm">
+                <div class="form-group">
+                  <label for="name">Name</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="name"
+                    formControlName="name"
+                    placeholder="Enter name"
+                  />
+                </div>
+                <div class="form-group">
+                  <label for="price">Price</label>
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="price"
+                    formControlName="price"
+                    placeholder="Enter price"
+                  />
+                </div>
+                <div class="form-group">
+                    <label for="description">Description</label>
+                    <input
+                      type="string"
+                      class="form-control"
+                      id="description"
+                      formControlName="description"
+                      placeholder="Enter description"
+                    />
+                  </div>
+                <div class="form-group">
+                  <label for="imgSrc">Image</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="imgSrc"
+                    formControlName="imgSrc"
+                    placeholder="Enter image"
+                  />
+                </div>
+              </form>
+          </div>
+          <div class="containerbtn"><button class="btnadd" (click)="addProduct(addproductForm.value)">Thêm sản phẩm</button></div>
+
     </div>
+
     <div class="footer">
         <div class="left_footer">
             <div class="lv1">
