--- a/src/app/pages/admin/components/main/main.component.scss
+++ b/src/app/pages/admin/components/main/main.component.scss
@@ -19,7 +19,21 @@
     padding-right: 10%;
     padding-top: 5%;
 }
-
+.containerbtn{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.btnadd{
+    width: 100px;
+    height: 50px;
+    background-color: #252525;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    margin: 10px;
+}
 .container .item {
     margin: 10px;
     width: 25%;
@@ -134,3 +148,33 @@ input::placeholder {
     width: 40px;
     height: 40px;
 }
+.containerinput{
+    margin-top: 100px;
+    width: 100%;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.form {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  
+    .form-group {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      width: 100%;
+      margin-bottom: 10px;
+  
+      input {
+        color: #ccc;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        padding: 10px;
+        margin-bottom: 10px;
+      }
+    }
+  }
