--- a/src/app/pages/admin/components/main/main.component.scss
+++ b/src/app/pages/admin/components/main/main.component.scss
@@ -137,6 +137,7 @@ input::placeholder {
 
     button {
         margin: 0 5px;
+        width: 10%;
     }
     .liname{
         width: 50%;
@@ -149,7 +150,7 @@ input::placeholder {
     height: 40px;
 }
 .containerinput{
-    margin-top: 100px;
+
     width: 100%;
     align-items: center;
     display: flex;
