--- a/src/app/pages/home/components/main/main.component.scss
+++ b/src/app/pages/home/components/main/main.component.scss
@@ -20,7 +20,12 @@
 }
 .container .item{
     margin: 10px;
+    height: 100;
     width: 25%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+
 }
 
 
