--- a/src/app/pages/admin/components/header/header.component.html
+++ b/src/app/pages/admin/components/header/header.component.html
@@ -14,16 +14,10 @@
         <a href="">Outfit</a>
         <div class="iconmini" >
 
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                    d="M11 19C15.4183 19 19 15.4183 19 11C19 6.58172 15.4183 3 11 3C6.58172 3 3 6.58172 3 11C3 15.4183 6.58172 19 11 19Z"
-                    stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-                <path d="M20.9999 21L16.6499 16.65" stroke="black" stroke-width="2" stroke-linecap="round"
-                    stroke-linejoin="round"></path>
-            </svg>
+            <div (click)="toAdmin()" style="display: flex; align-items: center; justify-content: center; cursor: pointer;"> <mat-icon >manage_accounts</mat-icon></div>
 
 
-                <svg  width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" [routerLink]="['/cart']" >
+                <svg  width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" [routerLink]="['/cart']" style="cursor: pointer;" >
                     <path
                         d="M9 22C9.55228 22 10 21.5523 10 21C10 20.4477 9.55228 20 9 20C8.44772 20 8 20.4477 8 21C8 21.5523 8.44772 22 9 22Z"
                         stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -37,7 +31,7 @@
 
             
 
-              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" >
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" [routerLink]="['/home']" style="cursor: pointer;">
                 <path
                     d="M20 21V19C20 17.9391 19.5786 16.9217 18.8284 16.1716C18.0783 15.4214 17.0609 15 16 15H8C6.93913 15 5.92172 15.4214 5.17157 16.1716C4.42143 16.9217 4 17.9391 4 19V21"
                     stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -45,14 +39,14 @@
                     d="M12 11C14.2091 11 16 9.20914 16 7C16 4.79086 14.2091 3 12 3C9.79086 3 8 4.79086 8 7C8 9.20914 9.79086 11 12 11Z"
                     stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
             </svg>
-            <div (click)="login()"*ngIf="!isLogin"><mat-icon >login</mat-icon>
+            <div (click)="login()"*ngIf="!isLogin" style="display: flex; align-items: center; justify-content: center; cursor: pointer;"><mat-icon >login</mat-icon>
             </div>
-            <div (click)="logout()" *ngIf="isLogin"><mat-icon >logout</mat-icon>
+            <div (click)="logout()" *ngIf="isLogin" style="display: flex; align-items: center; justify-content: center; cursor: pointer;"><mat-icon >logout</mat-icon>
             </div>
-            <div (click)="toAdmin()"> <mat-icon>manage_accounts</mat-icon></div>
+
         </div>
-        <div id="in4User" class="box" *ngIf="this.userIn4Service.userInfo.value?.name">
-          <p>{{this.userIn4Service.userInfo.value?.name}}</p>
+        <div id="in4User" class="box" *ngIf="this.userIn4Service.userInfo.value?.name" style="padding-top: 13px; font-weight: 450; font-size: 15px;">
+          <p >{{this.userIn4Service.userInfo.value?.name}}</p>
       </div>
         
     </div>
