--- a/src/app/pages/cart/components/main/main.component.html
+++ b/src/app/pages/cart/components/main/main.component.html
@@ -1,32 +1,34 @@
 <div class="main">
     <div class="container">
-        <div class="item" *ngFor="let item of cartList$ | async">
+            <div class="total">
+        <div>Tổng cộng: {{total$ | async}}</div>
+        <button  (click)="clearAllCart()" class="btnclearall">Xoá tất cả</button>
+    </div>
+        <div class="item" *ngFor="let item of cartList$ | async" style="box-shadow: 0px 0px 7px #D2D2D2;">
             <mat-card class="example-card">
                 <mat-card-header>
                   <mat-card-title>{{item.name}}</mat-card-title>
-                  <mat-card-subtitle>{{item.price}}</mat-card-subtitle>
+                  <mat-card-subtitle>Giá: {{item.price}} - Số lượng:{{item.stock}}</mat-card-subtitle>
                 </mat-card-header>
                 <img mat-card-image src="{{item.imgSrc}}" alt="ảnh áo">
                 <mat-card-content>
-                  <p>
-                    {{item.description}}
+                  <p style="align-items: center;">
+                    Mô tả: {{item.description}}
                   </p>
                 </mat-card-content>
-                <mat-card-actions>
-                  <button mat-button (click)="addProductToStock(item)">thêm</button>
-                </mat-card-actions>
-                <mat-card-actions>
-                    <button mat-button (click)="removeProductFromStock(item)">bớt</button>
-                  </mat-card-actions>
-                  <mat-card-actions>
-                    <button mat-button (click)="removeProductFromCart(item)">xoá</button>
-                  </mat-card-actions>
+                <div class="containerbtn">
+                    <div>
+                        <button mat-button (click)="addProductToStock(item)" class="btn">thêm</button>
+                      </div>
+                      <div>
+                          <button mat-button (click)="removeProductFromStock(item)" class="btn">bớt</button>
+                        </div>
+                        <div>
+                          <button mat-button (click)="removeProductFromCart(item)" class="btn">xoá</button>
+                        </div>
+                </div>
               </mat-card>
         </div>
-    </div>
-    <div class="total">
-        <div>{{total$ | async}}</div>
-        <button  (click)="clearAllCart()">xoá tất cả</button>
     </div>
 
     <div class="footer">
