--- a/src/app/pages/cart/components/main/main.component.scss
+++ b/src/app/pages/cart/components/main/main.component.scss
@@ -16,13 +16,34 @@
     margin-bottom: 250px;
     padding-left: 10%;
     padding-right: 10%;
-    padding-top: 5%;
+    padding-top: 3%;
 }
 .container .item{
     margin: 10px;
     width: 25%;
 }
 
+.btnclearall{
+    margin: 10px 0;
+    width: 100px;
+    border-radius: 5px;
+}
+.btnclearall:hover{
+    margin: 10px 0;
+    border-radius: 5px;
+    background-color: gray;
+    color: white;
+}
+.btn{
+    margin: 10px 0;
+}
+.btn:hover{
+    background-color: black;
+    color: white;
+    border: 1px solid white;
+    border-radius: 4px;
+    margin: 10px 0;
+}
 
 
 .footer{
@@ -90,4 +111,22 @@ input::placeholder {
     justify-content: center;
     align-items: center;
 
+}
+.containerbtn{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    div{
+        margin: 5px;
+    }
+}
+.total{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    div{
+        font-size: 20px;
+        margin: 10px 0;
+    }
 }
