--- a/src/app/pages/home/components/main/main.component.html
+++ b/src/app/pages/home/components/main/main.component.html
@@ -1,20 +1,20 @@
 <div class="main">
     <div class="container">
-        <div class="item" *ngFor="let item of productList$ | async" style="display: flex; align-items: center; justify-content: center; width: 30%; height: 30%;">
+        <div class="item" *ngFor="let item of productList$ | async" style="display: flex; align-items: center; justify-content: center; width: 30%; height: 30%; box-shadow: 0px 0px 7px #D2D2D2; border-radius: 5px;">
+
             <mat-card class="example-card" style="width: 100%; height: 100%; display: flex;align-items: center; justify-content: center;flex-direction: column;">
                 <mat-card-header>
                   <mat-card-title>{{item.name}}</mat-card-title>
-                  <mat-card-subtitle>{{item.price}}</mat-card-subtitle>
+                  <mat-card-subtitle>Giá: {{item.price}}</mat-card-subtitle>
                 </mat-card-header>
                 <img mat-card-image src="{{item.imgSrc}}" alt="ảnh áo" style="width: 200px; height: 300px;">
                 <mat-card-content>
                   <p>
-                    {{item.description}}
+                    Description: {{item.description}}
                   </p>
                 </mat-card-content>
                 <mat-card-actions>
-                  <button mat-button (click)="addProductToCart(item)">buy</button>
-
+                  <button mat-button (click)="addProductToCart(item)" class="btnbuy">Mua</button>
                 </mat-card-actions>
               </mat-card>
         </div>
